2010-05-27 ccoutand <ccoutand@stmi.com>
	* include/var_io.h: Added ADC defines for AT91_M55800A CPU

2009-06-03 Oliver Munz <oli@snr.ch>

 	* Fix the a problem in the kernel delay_us, if the PIT is
	initialised later then the period. If the PIT has a big
	period (after reset) and has to be set to a lower period one has
	to be sure that the counter is lower then the period value one
	want to set...	
 
2009-05-25  John Dallaway  <john@dallaway.org.uk>

	* include/var_io.h: Provide additional SPI status register defines as
	reported by Peter Niebert. [ Bugzilla 1000781 ]

2009-05-20  Vibi Sreenivasan <vibi_sreenivasan@cms.com>

	* include/var_io.h (HAL_ARM_AT91_GPIO_MULTIDRAIN): Add a macro to
	enable/disable multidrain on a GPIO pin.

2008-11-03  Gabor Toeroek <tgabor84@gmail.com>

	* include/var_io.h: Added defines for AT91SAM7SE.

2008-10-19  Igor B. Poretsky <poretsky@mlbox.ru>

	* include/var_io.h Fixed various typos.

2008-09-02  John Eigelaar: <jeigelaar@mweb.co.za>
 
 	* include/var_io.h: Added support for a second flash controller.
	Fixed some cut and paste gremlins in the SSC definitions.
	Changed decimal definitions in TWI that could have been confused with 
	octal definitions.
	Added ADC definitions for the TRGEN bit and the PDC control bits.
	   

2008-07-12  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/hal_diag_dcc.{ch}
	* src/hal_diag.c
	* src/hal_diag_dbg.c
	* cdl/hal_arm_at91.cdl: Add support for DCC, ie the Debug
	Communications Channel, which is part of JTAG core of AT91 and
	most ARM processors. JTAG devices often make this available via a
	TCP port which can be accessed via telnet. NOTE: Only output to
	DCC has been tested via diag_printf. Code exists for input, but it
	has not been tested.
	
2007-03-05  Andrew Lunn <andrew.lunn@ascom.ch>

	* include/var_io.h: Fix a few typos pointed out by
	Igor B. Poretsky.
	
2007-02-13  John Eigelaar <jeigelaar@mweb.co.za>
 
 	* include/var_io.h: Fixed up the EMAC definitions to work